--- a/.github/workflows/html_to_pdf.yml
+++ b/.github/workflows/html_to_pdf.yml
@@ -5,6 +5,7 @@ on:
     branches: [main, master]
     paths:
       - "cv/**"
+    workflow_dispatch:
 
 jobs:
   build:
@@ -33,8 +34,13 @@ jobs:
           mkdir -p pdf
           node cv/render.js
 
-      - name: Upload PDF
-        uses: actions/upload-artifact@v4
+      - name: Publish Release with PDF
+        uses: softprops/action-gh-release@v1
         with:
-          name: Cesar_Gomez_Senior_RoR_Engineer
-          path: pdf/Cesar_Gomez_Senior_RoR_Engineer.pdf
+          name: "Latest CV"
+          tag_name: "cv-latest"
+          files: pdf/Cesar_Gomez_Senior_RoR_Engineer.pdf
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
