--- a/.github/workflows/html_to_pdf.yml
+++ b/.github/workflows/html_to_pdf.yml
@@ -5,7 +5,11 @@ on:
     branches: [main, master]
     paths:
       - "cv/**"
-    workflow_dispatch:
+
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
